--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,66 +1,116 @@
 
-html{
-    background-image:url("https://png.pngtree.com/thumb_back/fw800/background/20221102/pngtree-seamless-texture-of-a-printed-circuit-board-image_1421387.jpg");
-   
-    font-family: Arial, Helvetica, sans-serif;}
-
 
 body{
-
-
-    padding-left: 15%;
-    padding-right: 15%;}
-table{
-	border-spacing: 10px;
-    color: white;}
-
-/* td{text-align: center;} */
-td video{width:100%;}
-.sns{width:50px;height:50px;background-color:transparent;}
-.sns:hover{opacity:0.5;}
-.poster{width:100px;height:150px;}
-.poster:hover{opacity:0.5;}
-.poster_2{width:210px;height:118;}
-.poster_2:hover{opacity:0.5;}
-.img{width: 100%;}
-.list:hover{background-color:#5163ff;}
-.btn-link{
-    background-color: black;color: white;
-	border:none;
-    border-radius: 2px;
-    border-color: none;}
-.btn{
-    width: 100%;
-    background-color: transparent;
-    border: none;
+    padding-top: 2%;
+    padding-bottom:2%;
+    padding-left: 0%;
+    padding-right: 0%;
+    text-align: center;
+    background-color: #0c1820;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin:0;
     }
-a{text-decoration: none;color: orange;}
+    
+  
+  
 
-.card{
-background-image:url("https://img.freepik.com/premium-vector/electric-circuit-diagram-seamless-pattern-design-wall-decors-wallpapers-geometric-pattern_1048043-2.jpg");
- /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);}*/
+  @font-face {
+    font-family: Raglan;
+    src: url("assets/font/RaglanPunch.otf");
+  }
+  .xx{font-family: Raglan;color: rgb(174, 0, 0);font-size: 72pt;line-height: 1;}
+  .yy{font-family: Raglan;color:rgb(174, 0, 0);font-size: 36pt;line-height: 1;}
+  
+  .rainbow {
+      text-align: center;
+      text-decoration: underline;
+      font-size: 32px;
+      font-family: monospace;
+      letter-spacing: 5px;
+  }
+  .rainbow_text_animated {
+      background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      animation: rainbow_animation 6s ease-in-out infinite;
+      background-size: 400% 100%;
+  }
+  
+  @keyframes rainbow_animation {
+      0%,100% {
+          background-position: 0 0;
+      }
+  
+      50% {
+          background-position: 100% 0;
+      }
+  }
+  
+  a{all:unset;color:orange}
+  a:hover{color:yellow;cursor:pointer;}
+  ul {
+      list-style-type: none;
+  }
+  .sns{width:auto;height:50px;background-color:transparent;}
+  .sns:hover{opacity:0.5;}
+  /* Style the tab */
+  table{border-width: 0;}
+  tr{border-width: 0;}
+  td{border-width: 0;}
+  iframe{border-width: 0;}
+  .tab {
+    
+    overflow: hidden;
+    border: 0px solid #ccc;
+    background-color: transparent;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    
+    background-color: #1d3b4e;
+    /* float: left; */
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #386b8f;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 0px solid #ccc;
+    border-top: none;
+  }
+  
+  .poster{width:100px;height:150px;}
+  .poster:hover{filter: brightness(0.5);}
+  .poster_2{width:210px;height:118;}
+  .poster_2:hover{opacity:0.5;}
+  
 
-.mini-card-title{color:black;background-color: white; border-radius: 10px;border-spacing: 1px;}
-.mini-card-container{background-color: white; border-radius: 10px;border-spacing: 1px;}
-.mini-card-content{background-color: black; border-radius: 10px;}
-.header{font-weight: bold; color:white;background: linear-gradient(180deg, rgba(76,84,91,1) 0%, rgba(72,80,87,1) 41%, rgba(38,42,46,1) 67%, rgba(34,38,41,1) 100%);}
-.hazard-background {
-  height: 30px;
-  color: white;
-  padding: 5px;
-  font-size:20pt;
-  font-weight:bold;
-  -webkit-text-stroke: 1px black;
-  background-image: repeating-linear-gradient(
-    -55deg,
-    #000,
-    #000 20px,
-    #ffb101 20px,
-    #ffb101 40px
-  );}
+  .item {
+    vertical-align: top;
+    display: inline-block;
+    text-align: center;
+}
+.caption {
+    display: block;
+  color:white;
   
-  
-  
-  
-  
-  
+}
