--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -21,6 +21,7 @@
 
 /* (C) GALLERY IMAGES */
 .gallery img {
+  cursor: pointer;
   /* (C1) DIMENSION */
   width: 100%;
   height: 180px; /* optional */
@@ -32,7 +33,7 @@
 
   /* (C3) IMAGE RESIZE */
   /* cover | contain | fill | scale-down */
-  object-fit: scale-down ;
+  object-fit: scale-down;
 }
 
 /* (D) ON SMALL SCREENS - 2 IMAGES PER ROW */
