--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
     src: url('font/SuperSquad.ttf') format('truetype');
   }
 
-
 body{
+/*   background-image:url('https://www.g-gundam.net/common/img/bg1.png'); */
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 0%;
     padding-bottom:2%;
@@ -20,9 +20,18 @@ body{
   font-family: SuperSquad;
   color:white;
 }
-.text h1{-webkit-text-stroke:1px purple;}
+h1{
+  -webkit-text-stroke:1px black;
+/*   color:gold; */
+  padding:0px;margin:0px;
+}
+h1:hover{color:gold;}
+
+.table-bg{width:900px;text-align:center;}
 .htab{background-color:black;}
 .hbtn{
+/*   font-weight:bold; */
+/*   font-style:italic; */
   background-color: transparent;
   /* float: left; */
   border: none;
@@ -30,7 +39,7 @@ body{
   cursor: pointer;
   padding: 14px 16px;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 20px;
 }
 .hbtn:hover{
   color:white;
@@ -39,7 +48,7 @@ body{
 .hbtn_off{color:purple;}
 
   
-  a{all:unset;color:orange}
+  a{all:unset;color:darkviolet;}
   a:hover{color:yellow;cursor:pointer;}
   ul {
       list-style-type: none;
@@ -90,7 +99,7 @@ body{
     border-top: none;
   }
   
-  .poster{width:150px;height:200px;}
+  .poster{width:130px;height:180px;}
   .poster:hover{filter: brightness(0.5);}
   .poster_2{width:210px;height:118;}
   .poster_2:hover{opacity:0.5;}
