--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -30,7 +30,7 @@
 
   /* (C2) COLORS */
   border: 0px solid #ddd;
-  background: #fff;
+  background: none;
 
   /* (C3) IMAGE RESIZE */
   /* cover | contain | fill | scale-down */
