--- a/pages/Kertas/style.css
+++ b/pages/Kertas/style.css
@@ -23,9 +23,9 @@ position:relative;
 #bar button,
 #bar label,
 #bar input[type="text"] {
-  flex: 1 1 auto;
-  min-width: 32px;
-  padding: 0.5rem;
+  flex: 0 0 auto;
+  min-width:auto;
+  padding: 0.3rem;
 /*  font-size: 1rem;*/
   border-radius: 6px;
   border: 1px solid #ccc;
