--- a/pages/Stopmo/style.css
+++ b/pages/Stopmo/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 #preview {
-  width: 400px;
+  width: 300px;
   height: 300px;
   border: 2px solid #444;
   display: flex;
@@ -27,7 +27,8 @@ body {
 }
 
 .controls {
-  margin: 10px 0;
+flex: 1 1 auto;
+  min-width:auto;
 }
 
 .timeline {
