--- a/pages/Kertas/style.css
+++ b/pages/Kertas/style.css
@@ -73,7 +73,51 @@ input[type=color] {
   padding:0;
   border:none;
 }
+#settings{text-align:center;width:200px;z-index:99999999;position:fixed;bottom:90px;left:10px;background-color:lightgray;color:black;padding:10px;border-radius:5px;font-size:12px;transition: 0.3s;}
+#settings button{
+width:auto;
+margin-top:5px;
+}
 
+input[type=number] {
+ appearance: textfield;
+ width:100px;
+ font-size:18px;
+}
+.anchor-controls {
+ display: grid;
+ grid-template-columns: auto auto auto;
+ grid-template-rows: auto auto auto;
+ gap: 0px;
+ align-items: center;
+ margin-top: 10px;
+}
+.anchor-controls button {
+ width: 32px;
+ height: 32px;
+ font-size: 12px;
+ cursor: pointer;
+}
+.anchor-controls button:hover {
+ background: #ddd;
+}
+/* Place buttons in grid like CSP anchor */
+#resizeTop    { grid-column: 2; grid-row: 1; }
+#resizeLeft   { grid-column: 1; grid-row: 2; }
+#resizeCenter { grid-column: 2; grid-row: 2; }
+#resizeRight  { grid-column: 3; grid-row: 2; }
+#resizeBottom { grid-column: 2; grid-row: 3; }			
+				
+/* Toggle button */
+.panel-bottom {
+	position: fixed;
+	bottom: 50px;
+	left: 10px;
+	z-index: 100000000;
+	color: black;
+	cursor: pointer;
+}
+  
 #line {
   position:fixed;   /* stick to viewport */
   bottom:0;         /* anchor at bottom */
@@ -158,10 +202,8 @@ canvas {
 
 .sliders{
 position:fixed;
-top:20%;
-left:5px;
-/*background-color: red;*/
-/*transform: rotate(-90deg);*/
+bottom:90px;
+left:10px;
 }
 
 /*DRAG BUTTONS*/
